--- a/src/features/AdminPage/StreetcodesTable/SearchMenu.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/SearchMenu.styles.scss
@@ -20,7 +20,7 @@
         @include mut.sized(300px, 35px);
     }
 
-    .ant-select-selector, .ant-input-affix-wrapper {
+    .ant-select-selector, .ant-input-affix-wrapper, .ant-input-number {
         @include mut.with-font($font-size: 16px);
         
         &:hover {
