--- a/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
@@ -6,7 +6,7 @@
 .StreetcodeTableWrapper {
     @include mut.sized(80%);
     margin-top: f.pxToRem(82px);
-    margin-right: f.pxToRem(50px);
+    overflow: hidden;
     float: right;
 
     .ant-btn-primary:disabled {
@@ -15,6 +15,16 @@
       }
       .ant-btn-default {
         border-color: c.$accented-red-color;
+    }
+}   
+
+.actionButton {
+    margin-right: 10px;
+
+    &:hover {
+        color: c.$dark-red-color;
+        cursor: pointer;
+        scale: 1.2;
     }
 }
 
@@ -38,5 +48,32 @@
 
     &:active {
         size: 1.3;
+    }
+}
+
+.underTableElement {
+    display: inline-block;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 30px;
+
+    .pagenationElement, .pageAmountElement {
+        @include mut.with-font($font-size: 16px);
+        
+        &:hover {
+            border-color: c.$accented-red-color;
+        }
+        &:focus-within {
+            border-color: c.$accented-red-color;
+        }
+    }
+
+    .pagenationElement {
+        @include mut.sized(200px, 30px);
+        float: right;
+    }
+    
+    .pageAmountElement {
+        float: right;
     }
 }
