--- a/src/features/AdminPage/NewStreetcode/TimelineBlock/TimelineBlockAdmin.style.scss
+++ b/src/features/AdminPage/NewStreetcode/TimelineBlock/TimelineBlockAdmin.style.scss
@@ -5,7 +5,8 @@
 .timeline-admin-container{
     width:80% ;
     .timeline-admin-item{
-        width: f.pxToRem(100px);
+        width: f.pxToRem(150px);
+        height: f.pxToRem(50px);
         @include ut.flex-centered();
 
         @include ut.full-rounded(11px);
@@ -30,7 +31,11 @@
         }
     }
     .timeline-admin-new-items-container{
-        @include ut.flexed(row,center, nowrap,5px)
+        width: f.pxToRem(750px);
+        @include ut.flexed(row,start,left, wrap,5px);
+        align-content: start;
+        height:f.pxToRem(150px) ;
+        max-height:f.pxToRem(150px) ;
     }
     .ant-select-selection-item{
         background-color: c.$dark-red-color;
