--- a/src/features/AdminPage/NewStreetcode/NewStreetcode.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/NewStreetcode.styles.scss
@@ -4,16 +4,17 @@
 @use "@sass/_utils.functions.scss" as f;
 $articlesImg: "@assets/images/sources/Articles.png";
 
-.ForFansContainer {
-    @include mut.sized(80%);
-   
-     margin-top: f.pxToRem(85px);
-     margin-right: f.pxToRem(50px);
+.NewStreetcodeContainer {
+  @include mut.flexed(row, start,space-between);
+    @include mut.sized(100%);
      float: right;
      h1 {
         color: white;
         font-weight: 500;
       }
+  .block-header{
+    font-weight: 700;
+  }
 }
 
    
