--- a/src/features/AdminPage/TermDictionary/TermDictionary.component.scss
+++ b/src/features/AdminPage/TermDictionary/TermDictionary.component.scss
@@ -3,34 +3,78 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
 
+.wrapper {
+    display: grid;
+    grid-template-columns: 10% 90%;
+}
+
 .termDictionaryContainer {
-    padding-top: f.pxToRem(50px);
-    padding-left: f.pxToRem(60px);
+    padding-top: f.pxToRem(100px);
     height: 100vh;
+    width: 100%;
     margin: auto;
 
     .dictionary-header{
-        padding-bottom: f.pxToRem(30px);
+        display: grid;
+        grid-template-columns: 85% 15%;
+        margin-bottom: f.pxToRem(40px);
+        padding: 0 f.pxToRem(170px);
     }
-
-    text-align: center;
-
     .term-table{
-        padding-right: f.pxToRem(170px);
-        padding-left: f.pxToRem(220px);
+        padding: 0 f.pxToRem(170px);
     }
 }
     
 .controls{
-    position: sticky;
-    padding-bottom: f.pxToRem(10px);
-    top: 85%;
-    padding-left: 92%;
-
+    position: relative;
     button{
-        margin: f.pxToRem(5px);
-        border-radius: 100px;
-        height: 75px;
-        width: 75px;
+        border-radius: f.pxToRem(5px);
+        font-size: 12pt;
+        text-align: center;
+        height: max-content;
+        border: 0.025rem solid c.$dark-red-color;
+        color: c.$dark-red-color;
+        &:hover{
+            box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem c.$dark-red-color;
+            color: rgb(255, 255, 255);
+        }
+    }
+}
+
+.action-button{
+    border: none;
+    background: transparent;
+
+    .action-icon{
+        color: c.$dark-red-color;
+
+        &:hover{
+            scale: 1.35;
+            transition: all 0.125s;
+        }
+    }
+}
+
+.ant-table{
+    .ant-table-thead .ant-table-cell {
+        background-color: transparent;
+        border-bottom: 0.125rem solid c.$dark-red-color;
+        #text{
+            color: white;
+        }
+    }
+    .ant-table-tbody > tr.ant-table-row:hover > td {
+        transform: none !important;
+    }
+    .ant-table-cell{
+        border-bottom: 0.125rem solid c.$dark-red-color;
+    }
+}
+
+.ant-pagination-item{
+    border: 0.02rem solid c.$dark-red-color;
+    color: c.$dark-red-color;
+    a{
+        color: c.$dark-red-color;
     }
 }
