--- a/src/features/AdminPage/NewStreetcode/HistoryRelations/components/components.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/HistoryRelations/components/components.styles.scss
@@ -8,7 +8,7 @@ $list-width: 40%;
 .list-container {
     @include mut.sized($list-width);
     max-height: 160px; 
-    margin: 10px;
+    margin: 10px 0;
     overflow-y: auto;
 
     #list {
