--- a/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/components/ArtGallery/ArtGalleryAdminStyles.styles.scss
@@ -10,10 +10,10 @@
     height: pxToRem(560px);
 }
 .artGalleryWrapper {
+    @include mut.sized(100%, 300px);
+
     @include wr.main-page-block-wrapper();
     margin-bottom: pxToRem(390px);
-    @include mut.sized(85%, 280px);
-
 
     .artGalleryContainer {
         @include mut.rem-margined($top: 150px);
@@ -60,6 +60,8 @@
 }
 
 .artImageWrapper {
+        // @include mut.sized(50%, 113px);
+
   position: relative;  
   &:hover {
     cursor: pointer;
@@ -92,6 +94,8 @@
   }
 
   .imgImg{
+    @include mut.sized(80%, 30%);
+
     border-radius: pxToRem(30px);
   }
 }
