--- a/src/features/AdminPage/NewStreetcode/ArtGallery/ArtGallery.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/ArtGallery.styles.scss
@@ -1,8 +1,20 @@
+@use "@sass/mixins/_utils.mixins.scss" as mut;
+@use "@assets/sass/variables/_variables.fonts.scss" as ft;
 
-h3 {
-    margin: 30px 0;
-}
 
-h4 {
-    margin: 15px 0;
+.art-gallery-block{
+
+    .subheading{
+        @include mut.with-font(ft.$roboto-font, 300, 21px, normal) ;
+    }
+
+    @include mut.with-font(ft.$roboto-font, 300, 19px, normal) ;
+    
+    h3 {
+        margin: 30px 0;
+    }
+    
+    h4 {
+        margin: 15px 0;
+    }
 }
