--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryItem/ArtGallerySlideItem.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryItem/ArtGallerySlideItem.styles.scss
@@ -6,7 +6,23 @@
 
 .slideArt {
   flex: pxToRem(80px);
-  height: pxToRem(560px);
+  // height: pxToRem(560px);
+
+  .one{ 
+    width: 380px;
+    height: 250px;
+
+  }
+  .two{
+    width : 380px;
+    height: 535px;
+
+  }
+  .four{
+    width: 806px;
+    height: 536px;
+  }
+
 }
 
 .artImageWrapper {
@@ -42,7 +58,6 @@
   }
 
   .imgImg{
-      //  @include mut.sized(100%, 11px);
 
     border-radius: pxToRem(30px);
   }
