--- a/src/features/AdminPage/NewStreetcode/TextBlock/TextBlock.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/TextBlock/TextBlock.styles.scss
@@ -1,6 +1,6 @@
 @use "@sass/_utils.functions.scss" as f;
 
-.text-block-container{
+.textBlockContainer{
     display: grid;
     padding: f.pxToRem(20px) 0;
     grid-template-columns: 65% 35%;
