--- a/src/app/layout/header/HeaderBlock.styles.scss
+++ b/src/app/layout/header/HeaderBlock.styles.scss
@@ -8,22 +8,16 @@ $navbar-innerwidth: 500px;
 $navbar-hidden-innerwidth: 400px;
 
 .navBarContainer {
-  @include mut.sized(100%, 82px);
-
   @include mut.flexed($justify-content: space-between, $align-items: center);
-  padding: f.pxToRem(21px) f.pxToRem(32px);
+  @include mut.sized(100%, 82px);
+  @include mut.rem-padded(21px, 32px, 21px, 32px);
 
   position: fixed;
-  z-index: 6;
-
+  z-index: 7;
   background-color: white;
 
-  @media screen and (max-width: 1024px) {
-    @include mut.sized(100%, 64px);
-  }
-
   svg {
-    margin-right: f.pxToRem(34px);
+    @include mut.rem-margined($right: 34px);
 
     &:hover {
       cursor: pointer;
@@ -43,15 +37,15 @@ $navbar-hidden-innerwidth: 400px;
   .ant-input-affix-wrapper {
     position: relative;
     border: none;
-    height: 39px;
+    height: f.pxToRem(39px);
     width: calc(100vw - #{$navbar-innerwidth});
     
     @include mut.full-rounded(12px);
-    margin-right: f.pxToRem(10px);
+    @include mut.rem-margined($right: 10px);
 
     svg {
       color: c.$selected-arrow-color;
-      margin-right: f.pxToRem(11px);
+      @include mut.rem-margined($right: 11px);
     }
   }
 }
@@ -63,7 +57,7 @@ $navbar-hidden-innerwidth: 400px;
 
 .rightSectionContainer {
   @include mut.flexed($align-items: center);
-  margin-left: f.pxToRem(20px);
+  @include mut.rem-margined($left: 20px);
 
   .loginBtn {
     @include mut.sized(142px, 39px);
@@ -97,11 +91,15 @@ $navbar-hidden-innerwidth: 400px;
   .loginBtn {
     @include mut.hidden();
   }
+  
+  .burgerMenuContainer {
+    @include mut.rem-margined(0);
+  }
 }
 
 .hiddenHeaderInput {
   width: calc(100vw - #{$navbar-hidden-innerwidth});
-  height: 39px;
+  height: f.pxToRem(39px);
 
   @include mut.positioned-as(fixed, $left: 220px);
   @include mut.full-rounded(12px);
@@ -114,24 +112,70 @@ $navbar-hidden-innerwidth: 400px;
   }
 }
 
-@media screen and (max-width: 1024px) { // header height, smaller padding, other svgs
+@media screen and (max-width: 1024px) { 
   .navBarContainer {
-    padding: f.pxToRem(15px) f.pxToRem(0px);
+    @include mut.rem-padded(15px, 0, 15px, 0);
+
     .ant-input-affix-wrapper,
     .loginBtn {
-      @include mut.hidden(); //hidden elements
+      @include mut.hidden(); 
     }
     
     .leftPartContainer {
       svg {
-        transform: scale(0.8); //logo
+        transform: scale(0.8);
       }
     }
-    .rightPartContainer {
 
-      //svg {
-      //  @include mut.sized(25px, 25px);
-      //}
+    .rightPartContainer {
+      svg {
+        @include mut.rem-margined($right: 15px);
+
+        &:hover {
+          filter: invert(27%) sepia(26%) saturate(0%) hue-rotate(201deg) brightness(96%) contrast(86%);
+        }
+      }
+
+      .burgerMenuContainer {
+        @include mut.rem-margined($right: 15px);
+      }
+    }
+  }
+
+  .hiddenNavBar {
+    background: white;
+  }
+
+  .searchContainerMobile { 
+    @include mut.sized(100%, 70px);
+    @include mut.flexed($justify-content: space-between, $align-items: center);
+    @include mut.rem-padded(0, 15px, 15px, 15px);
+
+    position: fixed;
+    z-index: 6;
+    background-color: white;
+    transform: translateY(f.pxToRem(-200px));
+
+    &.active {
+      @include vnd.vendored(transition, 'transform 0.5s ease');
+      transform: translateY(f.pxToRem(78px));
+    }
+  
+    input {
+      @include mut.full-rounded(12px);
+      padding: 12px;
+      width: calc(100vw - f.pxToRem(100px));
+      height: f.pxToRem(45px);
+      margin-right: f.pxToRem(10px);
+      border: none;
+      background-color: c.$accented-gray-color;
+      color: c.$text-light-gray-color;
+    }
+
+    .searchButton {
+      @include mut.full-rounded(12px);
+      @include mut.sized(90px, 45px);
+      background-color: c.$accented-red-color;
     }
   }
 }
