--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -5,6 +5,7 @@ $lighter-black-color: #1D1F23 !important;
 $transparent-color: transparent !important;
 
 $accented-gray-color: #F4F4F4 !important;
+$text-light-gray-color: #D7D7D7 !important;
 $lighter-gray-color: #D3CDCA !important;
 $darker-gray-color: #5D5D5D !important;
 $dark-gray-color: #4D4D4D !important;
