--- a/src/app/common/components/BurgerMenu/BurgerMenu.styles.scss
+++ b/src/app/common/components/BurgerMenu/BurgerMenu.styles.scss
@@ -5,7 +5,7 @@
 .burgerMenuContainer {
   @include mut.sized(36px, 28px);
   @include mut.flexed($direction: column, $justify-content: center, $gap: 6px);
-  margin-right: f.pxToRem(20px);
+  @include mut.rem-margined($right: 20px);
 
   &:hover {
     cursor: pointer;
