--- a/src/app/layout/footer/Footer.styles.scss
+++ b/src/app/layout/footer/Footer.styles.scss
@@ -7,6 +7,10 @@
   @include mut.sized(100%, 206px);
   @include mut.flexed($justify-content: flex-start);
   background-color: c.$dark-red-color;
+
+  @media (max-width: 1024px){
+    display: none;
+  }
 }
 
 .footerCopyright {
@@ -15,6 +19,11 @@
 
   @include mut.colored(c.$copyright-section-color, c.$pure-white-color);
   @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 400, $font-size: 13px);
+
+  @media (max-width: 1024px){
+    padding: pxToRem(20px) pxToRem(10px);
+    text-align: center;
+  }
 }
 
 .footerLogoContainer {
