add partners page

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,7 +64,7 @@ ul, ol {
   
   &:hover{
     color:c.$pure-white-color ;
-    background-color: c.$accented-red-color;
-    border-color: c.$accented-red-color;
+    background-color: c.$dark-red-color;
+    border-color: c.$dark-red-color;
   }
 }
