--- a/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
@@ -35,3 +35,12 @@
     }
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .swiper-horizontal {
+
+    .swiper-slide{
+      margin-right: 100px !important;
+    }
+  }
+}
