--- a/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
@@ -6,6 +6,7 @@
 
 $timelineLvivImg: "@assets/images/timeline/Lviv.png";
 $timelineSquareImg: "@assets/images/timeline/Square.png";
+
 .timelineContainer{
   width: 100vw;
   max-width: f.pxToRem(1600px);
@@ -21,15 +22,15 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
 
    .sliderClass {
     @include mut.rem-margined($bottom: 25px, $top: 30px /*30px*/);
-  } 
+    } 
 
-  .slick-slider {
-    @include mut.parent-sized();
-  }
+    .slick-slider {
+      @include mut.parent-sized();
+    }
 
-  .slick-list {
-    margin:f.pxToRem(15px) 0  ;
-  }
+    .slick-list {
+      margin:f.pxToRem(15px) 0;
+    }
 
   .slick-track {
     
@@ -71,4 +72,12 @@ $timelineSquareImg: "@assets/images/timeline/Square.png";
     }
   }
 }
+}
+
+@media screen and (max-width: 1024px) {
+  .timelineContentContainer {
+    .slick-list {
+      margin:f.pxToRem(0) !important;
+    }
+  }
 }
