--- a/src/features/AdminPage/NewStreetcode/ArtGallery/components/PreviewImageModal/PreviewImageModal.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/ArtGallery/components/PreviewImageModal/PreviewImageModal.styles.scss
@@ -4,7 +4,7 @@
 @use "@assets/sass/variables/_variables.colors.scss" as c;
 
 .artPreviewModal{
-    max-width: f.pxToRem(400px);
+    max-width: f.pxToRem(380px);
     @include mut.with-font(ft.$roboto-font, 300, 20px, normal);
     color: c.$dark-red-color;
     align-items: center;
@@ -21,8 +21,28 @@
         @include mut.with-font(ft.$roboto-font, 300, 20px, normal) ;
     }
     textarea{
-        width: f.pxToRem(400px);
-        height: f.pxToRem(200px);
+        width: f.pxToRem(380px);
+        height: f.pxToRem(180px);
         resize: none;
     }
+    .saveButton{
+        background-color: c.$pure-white-color;
+        border-radius: 5px;
+        width: 30%;   
+        justify-content: center;
+        left: 50%;
+        @include mut.with-font(ft.$roboto-font, 300, 15px, normal);
+        border-color: c.$dark-red-color;
+        color: c.$dark-red-color;
+        &:hover{
+            color: c.$pure-white-color;
+            background-color: c.$dark-red-color;
+        }
+      }
+   
+    // &.ant-modal {
+    //     .ant-modal-content {
+          
+    //     }
+    // }
 }
