--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -68,4 +68,35 @@
   &:hover {
     color: c.$accented-red-color;
   }
+  
+  
 }
+@media screen and (max-width: 480px) { 
+
+  .interestingFactSlide {
+
+    @include mut.sized(290px, 312px);
+    @include mut.full-rounded(20px);
+
+      .slideImage {
+        @include mut.sized(100%, 188px);
+      }
+      .slideText {
+        @include mut.sized(100%, 125px);
+        .heading {
+          @include mut.with-font($font-weight: 500, $font-size: 12px);
+          line-height: f.pxToEm(15px);
+        }
+        .mainText {
+          @include mut.with-font($font-weight: 300, $font-size: 10px);
+          line-height: f.pxToEm(19px);
+        }
+      } 
+
+      .readMoreParagraph {
+        @include mut.rem-padded(4px, 20px, 0px, 20px);
+        @include mut.with-font(ft.$roboto-font, 300, 10px, normal);        
+      }
+  }
+ }
+ 
