fixed дивитися всіх button problem

--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -6,7 +6,7 @@
 $moreInfo-width: 150px;
 
 .relatedFiguresWrapper {
-    @include mut.sized($height: 700px); 
+    @include mut.sized($height: 600px); 
     @include wr.main-page-block-wrapper();
     @include mut.rem-margined($bottom: 50px, $top: 170px);
 }
@@ -20,7 +20,7 @@ $moreInfo-width: 150px;
         }
     }
 
-    .moreInfo {
+    .moreInfo p {
         color: c.$pure-white-color;
     }
 }
@@ -38,11 +38,6 @@ $moreInfo-width: 150px;
 .relatedFiguresContainer {
     @include mut.sized($width: 90%, $height: 100%);
     @include mut.flexed($direction: column, $align-items: center);
-
-    @media screen and (max-width: 1024px) {
-        @include mut.sized($width: 90%, $height: 100%);
-        @include mut.flexed($direction: column, $align-items: center);
-    }
 }
 
 .moreInfo {
@@ -80,20 +75,22 @@ $moreInfo-width: 150px;
     }
 }
 
-/*@media screen and (max-width: 480px) {
-    .relatedFiguresSliderContainer {
-        //@include mut.sized($width: 390px);
-        width: 90vw !important;
+@media screen and (max-width: 480px) {
+    .relatedFiguresWrapper {
+        @include mut.sized($height: 600px); 
+        @include mut.rem-margined($bottom: 30px, $top: 150px);
     }
-}*/
+}
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width: 481px) {
     .relatedFiguresWrapper {
         @include mut.sized($height: 400px); 
     }
+}
 
+@media screen and (max-width: 1024px) {
     .relatedFiguresSliderContainer {
-        width: 95vw !important;
+        width: 100vw !important;
 
         .slick-track {
             @include mut.flexed($align-items: flex-start, $gap: 10px);
@@ -106,4 +103,9 @@ $moreInfo-width: 150px;
             visibility: hidden;
         }
     }
+
+    .moreInfo p {
+        color: c.$pure-white-color;
+    }
 }
+
