--- a/src/features/StreetcodePage/MainBlock/BreadCrumb/BreadCrumb.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/BreadCrumb/BreadCrumb.styles.scss
@@ -34,3 +34,9 @@
   background-color: c.$dark-red-color;
   margin-bottom: f.pxToRem(2px);
 }
+@media (max-width: 1024px) {
+  .breadcrumbContainer{
+    top: f.pxToRem(10px);
+    right: f.pxToRem(10px);
+  }
+}
